Fix body overflow

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -54,6 +54,7 @@
   body {
     line-height: 1.5;
     min-height: 100vh;
+    overflow-x: hidden;
   }
 
   /* Set shorter line heights on headings and interactive elements */
